[gd_scene load_steps=4 format=3 uid="uid://c6anmt5xh8uo7"]

[ext_resource type="Script" path="res://src/main_menu_UI.gd" id="1_6pjqt"]

[sub_resource type="SystemFont" id="SystemFont_fnmoh"]
font_names = PackedStringArray("Century Gothic")

[sub_resource type="SystemFont" id="SystemFont_uejnl"]
font_names = PackedStringArray("Century Gothic")

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6pjqt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.396078, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 13
theme_override_constants/margin_top = 13
theme_override_constants/margin_right = 13
theme_override_constants/margin_bottom = 13

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = SubResource("SystemFont_fnmoh")
theme_override_font_sizes/font_size = 60
text = "VR EARTHQUAKE EXPERIENCE"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="startButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_uejnl")
theme_override_font_sizes/font_size = 30
text = "START GAME"

[node name="mapButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_uejnl")
theme_override_font_sizes/font_size = 30
text = "EARTHQUAKE MAP"

[node name="leaderboardButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_uejnl")
theme_override_font_sizes/font_size = 30
text = "LEADERBOARD"

[node name="exitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_uejnl")
theme_override_font_sizes/font_size = 30
text = "QUIT GAME"
